--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "vanilla-vite-template",
+  "name": "movalova",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-vite-template/",
+    "build": "vite build --base=/movalova/",
     "preview": "vite preview",
     "build:preview": "vite build && vite preview",
     "predeploy": "npm run build",
     "deploy": "netlify deploy -p"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
+    "glob": "^11.0.1",
     "netlify-cli": "^17.30.0",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
@@ -20,9 +20,11 @@
     "vite": "^4.5.2",
     "vite-plugin-image-optimizer": "^1.1.8"
   },
-  "author": "Andrii Kyrylenko <z9877969@gmail.com>",
+  "author": "Oleksandra Laposhko <laposhko0@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
+    "swiper": "^11.2.4",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
